Fix double scrollbar while keeping sticky ids

--- a/webui/react/src/pages/ExperimentDetails/TrialsComparisonModal.module.scss
+++ b/webui/react/src/pages/ExperimentDetails/TrialsComparisonModal.module.scss
@@ -3,9 +3,9 @@
   border-radius: var(--theme-sizes-border-radius);
   display: flex;
   flex-direction: column;
-  grid-auto-flow: row;
+  flex-shrink: 0;
   height: 75vh;
-  overflow-x: scroll;
+  overflow: auto;
 
   %tableRow {
     align-items: center;
@@ -14,8 +14,8 @@
     grid-auto-columns: minmax(160px, 1fr);
     grid-auto-flow: column;
     grid-template-columns: 170px repeat(auto-fill, minmax(160px, 1fr));
-    height: 50px;
     justify-content: space-between;
+    min-height: 50px;
     padding: var(--theme-sizes-layout-tiny) var(--theme-sizes-layout-big);
 
     & > * { margin: 0; }
@@ -31,12 +31,18 @@
 
     @extend %tableRow;
   }
-  .tableBody {
-    overflow: auto;
-  }
   .headerRow {
     background-color: var(--theme-colors-monochrome-16);
     border-bottom: 1px solid var(--theme-colors-monochrome-14);
+
+    @extend %tableRow;
+  }
+  .idRow {
+    background-color: var(--theme-colors-monochrome-16);
+    border-bottom: 1px solid var(--theme-colors-monochrome-14);
+    position: sticky;
+    top: 0;
+    z-index: 9999;
 
     @extend %tableRow;
   }
